# ZGE

./: .gitignore  CMakeLists.txt  README  zge.h  zge.pch
ZGE.xcodeproj/: project.pbxproj
ZGE.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cmake/Modules/: FindLib3ds.cmake
include/SDL2/: SDL_config.h
include/zge/: application.h  camera.h  display.h  display_manager.h  engine.h  event.h  exception.h  fp_responder.h  game_manager.h  geometry.h  gl_buffer.h  gl_display.h  gl_includes.h  input_manager.h  logger.h  math.h  matrix.h  model.h  node.h  noncopyable.h  notification_center.h  osx_platform.h  platform.h  run_loop.h  runnable_interface.h  scene.h  schedulable.h  types.h  util.h  vector.h  viewport.h  zge.h
lib/: lib3ds-2.0.0.0.dylib  libSDL2-2.0.0.dylib  libSDL_image-1.2.0.dylib  libfreetype.6.dylib
src/: application.mm  camera.cpp  display.cpp  display_manager.cpp  engine.cpp  event.cpp  exception.cpp  fp_responder.cpp  game_manager.cpp  geometry.cpp  gl_buffer.cpp  gl_display.cpp  input_manager.cpp  logger.cpp  matrix.cpp  model.cpp  node.cpp  notification_center.cpp  osx_platform.mm  platform.cpp  run_loop.cpp  scene.cpp  util.cpp  vector.cpp  viewport.cpp  zge.h  zge.pch
src/audio/: audio_asset.cpp  audio_asset.h  audio_manager.cpp  audio_manager.h  sound.cpp  sound.h  sound_private.h
src/contrib/: 3dcamera.cpp  3dcamera.h  bmp_image.cpp  bmp_image.h  box_layout.cpp  box_layout.h  camera_controller.cpp  camera_controller.h  cube.cpp  cube.h  fp_responder.cpp  fp_responder.h  line.cpp  line.h  mesh_node.cpp  orthocamera.cpp  orthocamera.h  plane.cpp  plane.h  quad.cpp  quad.h  shape_node.cpp  shape_node.h  sprite_node.cpp  sprite_node.h  wave_audio_asset.cpp  wave_audio_asset.h
src/core/: application.cpp  application.h  application.mm  color.cpp  color.h  defines.h  display.cpp  display.h  display_manager.cpp  display_manager.h  engine.cpp  engine.h  event.cpp  event.h  foundation.h  game_manager.cpp  game_manager.h  geometry.cpp  geometry.h  input_manager.cpp  input_manager.h  noncopyable.h  observable.h  observable.hpp  osx_platform.h  osx_platform.mm  platform.cpp  platform.h  render_manager.cpp  render_manager.h  resource_bundle.cpp  resource_bundle.h  resource_bundle_osx.mm  run_loop.cpp  run_loop.h  schedulable.cpp  schedulable.h  schedulable.hpp  semaphore.cpp  semaphore.h  (+6 more)
src/game/: mesh_node.cpp  node.cpp  node.h  scene.cpp  scene.h
src/graph/: action.cpp  action.h  geometry.cpp  geometry.h  geometry_private.h  layout.h  material.cpp  material.h  material.hpp  mesh_node.h  model.cpp  model.h  node.cpp  node.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
src/input/: event.cpp  event.h  input_manager.cpp  input_manager.h  responder.cpp  responder.h
src/math/: constants.h  geometry.cpp  geometry.h  geometry.hpp  math.h  matrix.cpp  matrix.h  vector.cpp  vector.h  vector_private.h
src/renderer/: camera.cpp  camera.h  display_render_context.cpp  display_render_context.h  eagl_render_context.h  eagl_render_context.mm  gl_buffer.cpp  gl_buffer.h  gl_display.cpp  gl_display.h  gl_includes.h  gl_vertexarray.cpp  gl_vertexarray.h  graphics_buffer.cpp  graphics_buffer.h  image.cpp  image.h  light.cpp  light.h  model.cpp  model.h  opengl.h  render_context.cpp  render_context.h  render_manager.cpp  render_manager.h  renderable.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  uniform.cpp  uniform.h  uniform.hpp  vertex_array.cpp  vertex_array.h  vertexarray.cpp  vertexarray.h  (+2 more)
src/shaders/: fragment.fsh  fragment_shader.h  shader_common.glsl  vertex.vsh  vertex_shader.h
src/text/: font.cpp  font.h  glyph.h  text_node.cpp  text_node.h
src/util/: data.cpp  data.h  describable.cpp  describable.h  exception.cpp  exception.h  glutil.cpp  glutil.h  logger.cpp  logger.h  notification_center.cpp  notification_center.h  perf_monitor.cpp  perf_monitor.h  util.cpp  util.h
src/zge/: zge.h
src/zge/audio/: audio_asset.cpp  audio_asset.h  audio_manager.cpp  audio_manager.h  sound.cpp  sound.h  sound_private.h
src/zge/contrib/: 3dcamera.cpp  3dcamera.h  box_layout.h  camera_controller.h  cube.cpp  cube.h  line.cpp  line.h  orthocamera.cpp  orthocamera.h  plane.h  quad.cpp  quad.h  sprite_node.cpp  sprite_node.h  wave_audio_asset.cpp  wave_audio_asset.h
src/zge/core/: application.cpp  application.h  color.cpp  color.h  defines.h  display.cpp  display.h  engine.cpp  engine.h  foundation.h  noncopyable.h  observable.h  observable.hpp  resource_bundle.cpp  resource_bundle.h  run_loop.cpp  run_loop.h  schedulable.h  schedulable.hpp  timer.cpp  timer.h  types.h
src/zge/graph/: action.cpp  action.h  geometry.cpp  geometry.h  layout.cpp  layout.h  material.h  model.cpp  model.h  node.cpp  node.h  scene.cpp  scene.h
src/zge/input/: event.cpp  (+5 more)
support/: Info.plist
zge/SDL2/: SDL_revision.h
zge/src/: application.mm  display.cpp  display_manager.cpp  error.cpp  exception.cpp  game_manager.cpp  geometry.cpp  gl_display.cpp  input_manager.cpp  logger.cpp  matrix.cpp  node.cpp  osx_platform.mm  platform.cpp  run_loop.cpp  scene.cpp  util.cpp  vector.cpp
zge/tests/: test_main.cpp
(+112 files in other folders)
